--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "vitepress bloh",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "dev": "vitepress --port 3000",
+    "build": "vitepress build",
+    "serve": "vitepress serve"
   },
   "author": "xieyezi",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@vueuse/core": "^8.3.1",
+    "vue": "^3.2.33"
+  },
+  "devDependencies": {
+    "@iconify-json/carbon": "^1.1.3",
+    "@unocss/reset": "^0.31.13",
+    "typescript": "^4.6.3",
+    "unocss": "^0.31.13",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
     "vitepress": "^0.22.3"
   }
