--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vitepress --port 3000",
     "build": "vitepress build",
-    "serve": "vitepress serve"
+    "serve": "vitepress serve",
+    "format": "prettier --write \".//**/*.ts\" \".//**/*.vue\" \".//**/*.md\""
   },
   "author": "xieyezi",
   "license": "ISC",
@@ -15,8 +16,11 @@
     "vue": "^3.2.33"
   },
   "devDependencies": {
+    "@changanauto/prettier-config-preset": "^0.0.15",
     "@iconify-json/carbon": "^1.1.2",
+    "@types/node": "^17.0.25",
     "@unocss/reset": "^0.31.13",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "unocss": "^0.31.13",
     "unplugin-vue-components": "^0.19.3",
