--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@changanauto/prettier-config-preset": "^0.0.15",
     "@iconify-json/carbon": "^1.1.2",
+    "@iconify-json/icon-park-outline": "^1.1.1",
     "@iconify-json/logos": "^1.1.5",
     "@types/node": "^17.0.25",
     "@unocss/reset": "^0.31.13",
