--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vitepress --port 3000",
     "build": "vitepress build",
     "serve": "vitepress serve",
+    "deploy": "bash deploy.sh",
     "format": "prettier --write \".//**/*.ts\" \".//**/*.vue\" \".//**/*.md\""
   },
   "author": "xieyezi",
