--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v3
+          version: 7
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: yarn
-      - run: yarn install
+          cache: 'pnpm'
 
+      - name: Install dependencies
+        run: pnpm install
+        
       - name: Build
-        run: yarn docs:build
+        run: pnpm docs:build
 
       - name: Deploy
         run: |
