chore: update build config

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
-        
+
       - name: Build
-        run: pnpm docs:build
+        run: pnpm build
 
       - name: Deploy
         run: |
