--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,6 @@ jobs:
           git config user.email "${{ secrets.GIT_EMAIL }}"
           git add -A
           git commit -m 'deploy'
-          git push -f https://${{ secrets.BLOG_ACCESS_TOKEN }}@github.com/xieyezi/xieyezi.github.io.git master
+          git push -f git push -f https://xieyezi:${{ secrets.BLOG_ACCESS_TOKEN }}@github.com/xieyezi/xieyezi.github.io.git master
           cd -
+
