--- a/nginx.conf
+++ b/nginx.conf
@@ -29,8 +29,8 @@ http {
 		server_name  www.xieyezi.com;
 		
 		location / {
-		 index index.html index.htm;
-         root /webroot/blog;
+		 index index.html index.htm;   
+         root /usr/share/nginx/html;
 		}
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
