--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,12 @@ jobs:
           source: "Dockerfile"
           target: ".vitepress/dist/Dockerfile"
 
+      - name: copy server-deploy file to dist
+        uses: canastro/copy-file-action@master
+        with:
+          source: "server_deploy.sh"
+          target: ".vitepress/dist/server_deploy.sh"
+
       - name: Deploy to ECS Server
         uses: cross-the-world/scp-pipeline@master
         env:
@@ -69,3 +75,11 @@ jobs:
           connect_timeout: 10s
           local: ".vitepress/dist"
           remote: /webroot/blog
+
+      - name: login ecs server and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_USER_HOST }}
+          username: ${{ secrets.SERVER_USER_NAME }}
+          password: ${{ secrets.SERVER_USER_PASSWORD }}
+          script: cd .. && cd webroot/blog && sh server_deploy.sh
